// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecretInput render and edit secret 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="null-0"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <label
                class="bp3-label"
              >
                test
              </label>
              <div
                class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
              >
                <a
                  class="containerLink"
                  data-testid="test"
                  href="/"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="key-main"
                    style="height: 12px;"
                  >
                    <svg
                      height="24"
                      width="24"
                    >
                      <g
                        fill="none"
                        stroke="#1C1C28"
                        stroke-width="0.5"
                      >
                        <path
                          d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                        />
                        <path
                          d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                        />
                      </g>
                    </svg>
                  </span>
                  <p
                    class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-blue500 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                  >
                    <div>
                      secret.configureSecret
                    </div>
                    <div>
                      &lt;test&gt;
                    </div>
                  </p>
                </a>
                <button
                  class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color StyledProps--main containerEditBtn"
                  data-testid="test-edit"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    <span
                      class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--color StyledProps--color-blue500"
                      icon="edit"
                    >
                      <svg
                        data-icon="edit"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          edit
                        </desc>
                        <path
                          d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`SecretInput render and pick a secret 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="null-0"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <label
                class="bp3-label"
              >
                test
              </label>
              <div
                class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
              >
                <a
                  class="containerLink"
                  data-testid="test"
                  href="/"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="key-main"
                    style="height: 12px;"
                  >
                    <svg
                      height="24"
                      width="24"
                    >
                      <g
                        fill="none"
                        stroke="#1C1C28"
                        stroke-width="0.5"
                      >
                        <path
                          d="M5.444 1A4.45 4.45 0 001 5.444c0 2.459 1.994 4.46 4.444 4.46 1.939 0 3.613-1.542 4.202-2.995a.393.393 0 01.23-.223.39.39 0 01.322.015l1.032.507.757-.72a.402.402 0 01.552-.007l.543.493.547-.556a.404.404 0 01.572-.005l.527.516.528-.53a.406.406 0 01.571-.002l.522.522.524-.523a.406.406 0 01.571 0l.522.522.523-.522a.414.414 0 01.315-.118.41.41 0 01.294.16l.277.369c.116-.153.234-.311.312-.396a.412.412 0 01.3-.134c.693 0 .927-.37.927-1.465 0-1.018-.636-1.381-1.23-1.381H9.638a.408.408 0 01-.35-.202A4.448 4.448 0 005.444 1h0z"
                        />
                        <path
                          d="M3.828 3.99c.403 0 .769.163 1.034.428a1.458 1.458 0 010 2.067 1.458 1.458 0 01-2.067 0 1.458 1.458 0 010-2.067c.265-.265.63-.428 1.033-.428z"
                        />
                      </g>
                    </svg>
                  </span>
                  <p
                    class="StyledProps--font StyledProps--main containerLinkText StyledProps--color StyledProps--color-blue500 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-small"
                  >
                    <div>
                      createOrSelectSecret
                    </div>
                  </p>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`SecretInput render and pick a secret 2`] = `
<div
  class="bp3-dialog dialog"
>
  <section
    class="main"
  >
    <div
      class="bp3-tabs"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_CreateOrSelect_create"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="create"
          id="bp3-tab-title_CreateOrSelect_create"
          role="tab"
          tabindex="0"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--padding-medium"
          >
            Create a new secret
          </p>
        </div>
        <div
          aria-controls="bp3-tab-panel_CreateOrSelect_reference"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="reference"
          id="bp3-tab-title_CreateOrSelect_reference"
          role="tab"
          tabindex="0"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--padding-medium"
          >
            Select an existing secret
          </p>
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_CreateOrSelect_create"
        class="bp3-tab-panel"
        id="bp3-tab-panel_CreateOrSelect_create"
        role="tabpanel"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="bp3-form-group"
                data-id="secretManagerIdentifier-0"
              >
                <label
                  class="bp3-label"
                  for="secretManagerIdentifier"
                >
                  secret.labelSecretsManager
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="secretManagerIdentifier"
                          placeholder="Search..."
                          style="padding-right: 0px;"
                          type="text"
                          value="Harness Secrets Manager"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="InputWithIdentifier--txtNameContainer"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    ID
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                        tabindex="0"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        />
                      </div>
                    </span>
                  </span>
                  <span
                    class="bp3-icon bp3-icon-edit StyledProps--main"
                    icon="edit"
                    style="vertical-align: middle;"
                  >
                    <svg
                      data-icon="edit"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-1"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    secret.labelSecretName
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
              >
                <label
                  class="bp3-label"
                  for="value"
                >
                  secret.labelSecretValue
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="value"
                      placeholder="secret.placeholderSecretValue"
                      type="password"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
              >
                <label
                  class="bp3-label"
                  for="description"
                >
                  description
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <textarea
                    autocomplete="off"
                    class="bp3-input bp3-fill"
                    name="description"
                  />
                </div>
              </div>
              <div
                class="bp3-form-group"
              >
                <label
                  class="bp3-label"
                  for="tags"
                >
                  tagsLabel
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input bp3-tag-input"
                  >
                    <div
                      class="bp3-tag-input-values"
                    >
                      <input
                        class="bp3-input-ghost"
                        data-mentions="kv-tag-input-tags}"
                        placeholder="Type and press enter to create a tag"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary StyledProps--margin-top-large"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  save
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
      <div
        aria-hidden="true"
        aria-labelledby="bp3-tab-title_CreateOrSelect_reference"
        class="bp3-tab-panel"
        id="bp3-tab-panel_CreateOrSelect_reference"
        role="tabpanel"
      >
        <div
          class="StyledProps--font StyledProps--main container"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          >
            <div
              class="searchBox"
            >
              <div
                class="TextInput--main search"
              >
                <div
                  class="bp3-input-group"
                >
                  <span
                    class="bp3-icon bp3-icon-search StyledProps--main"
                    icon="search"
                  >
                    <svg
                      data-icon="search"
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                    >
                      <desc>
                        search
                      </desc>
                      <path
                        d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <input
                    class="bp3-input"
                    placeholder="search"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="tabsContainer"
          >
            <div
              class="bp3-tabs bp3-vertical Tabs--main Tabs--vertical"
            >
              <div
                class="bp3-tab-list"
                role="tablist"
              >
                <div
                  class="bp3-tab-indicator-wrapper"
                  style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
                >
                  <div
                    class="bp3-tab-indicator"
                  />
                </div>
                <div
                  aria-controls="bp3-tab-panel_selectScope_account"
                  aria-disabled="false"
                  aria-expanded="true"
                  aria-selected="true"
                  class="bp3-tab"
                  data-tab-id="account"
                  id="bp3-tab-title_selectScope_account"
                  role="tab"
                  tabindex="0"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-medium"
                  >
                    <span
                      class="bp3-icon bp3-icon-layers StyledProps--main iconMargin"
                      icon="layers"
                    >
                      <svg
                        data-icon="layers"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          layers
                        </desc>
                        <path
                          d="M.55 4.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5a.998.998 0 00-.06-1.81L8.4.08a1.006 1.006 0 00-.79 0l-6.99 3a.992.992 0 00-.07 1.81zM15 10c-.16 0-.31.04-.45.11L8 13.38 1.45 10.1c-.14-.06-.29-.1-.45-.1-.55 0-1 .45-1 1 0 .39.23.73.55.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5c.32-.16.55-.5.55-.89 0-.55-.45-1-1-1zm0-3.5c-.16 0-.31.04-.45.11L8 9.88 1.45 6.61A.997.997 0 001 6.5c-.55 0-1 .45-1 1 0 .39.23.73.55.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5c.32-.16.55-.5.55-.89 0-.55-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    account
                  </p>
                </div>
              </div>
              <div
                aria-hidden="false"
                aria-labelledby="bp3-tab-title_selectScope_account"
                class="bp3-tab-panel"
                id="bp3-tab-panel_selectScope_account"
                role="tabpanel"
              >
                <div
                  class="referenceList"
                >
                  <div
                    class="listItem listItem"
                  >
                    <div
                      class="item"
                    >
                      <span
                        class="bp3-icon StyledProps--main secretIcon"
                        data-icon="text"
                      >
                        <svg
                          fill="none"
                          height="24"
                          viewBox="0 0 16 19"
                          width="24"
                        >
                          <path
                            d="M11.585 18.334H4.467v-.667c.371-.135 1.916-1.009 2.356-1.076V1.667H2.947L1.3 5.14H.667c-.051-.338 0-4.469 0-4.807h14.718c0 .338.05 4.452 0 4.807h-.658L13.13 1.667H9.255V16.59c.439.084 1.976.924 2.33 1.076v.666z"
                            fill="#3E7BFA"
                          />
                        </svg>
                      </span>
                      <div>
                        <div>
                          a1
                        </div>
                        <div
                          class="meta"
                        >
                          a1
                           . 
                          harnessSecretManager
                        </div>
                      </div>
                    </div>
                    <span
                      class="bp3-icon StyledProps--main iconCheck"
                      data-icon="pipeline-approval"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 19 17"
                        width="16"
                      >
                        <path
                          d="M18.81.669l.006.004.015.013a.5.5 0 01.062.7L6.479 16.375a.5.5 0 01-.709.062.52.52 0 01-.136-.176.523.523 0 01-.126-.095L.132 10.578a.5.5 0 01.005-.698l.017-.018a.5.5 0 01.707-.005l.007.007 5.233 5.367L18.107.735a.5.5 0 01.704-.066z"
                          fill="#5CC800"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="listItem listItem"
                  >
                    <div
                      class="item"
                    >
                      <span
                        class="bp3-icon StyledProps--main secretIcon"
                        data-icon="text"
                      >
                        <svg
                          fill="none"
                          height="24"
                          viewBox="0 0 16 19"
                          width="24"
                        >
                          <path
                            d="M11.585 18.334H4.467v-.667c.371-.135 1.916-1.009 2.356-1.076V1.667H2.947L1.3 5.14H.667c-.051-.338 0-4.469 0-4.807h14.718c0 .338.05 4.452 0 4.807h-.658L13.13 1.667H9.255V16.59c.439.084 1.976.924 2.33 1.076v.666z"
                            fill="#3E7BFA"
                          />
                        </svg>
                      </span>
                      <div>
                        <div>
                          demo-1
                        </div>
                        <div
                          class="meta"
                        >
                          demo1
                           . 
                          harnessSecretManager
                        </div>
                      </div>
                    </div>
                    <span
                      class="bp3-icon StyledProps--main iconCheck"
                      data-icon="pipeline-approval"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 19 17"
                        width="16"
                      >
                        <path
                          d="M18.81.669l.006.004.015.013a.5.5 0 01.062.7L6.479 16.375a.5.5 0 01-.709.062.52.52 0 01-.136-.176.523.523 0 01-.126-.095L.132 10.578a.5.5 0 01.005-.698l.017-.018a.5.5 0 01.707-.005l.007.007 5.233 5.367L18.107.735a.5.5 0 01.704-.066z"
                          fill="#5CC800"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="listItem listItem"
                  >
                    <div
                      class="item"
                    >
                      <span
                        class="bp3-icon StyledProps--main secretIcon"
                        data-icon="text"
                      >
                        <svg
                          fill="none"
                          height="24"
                          viewBox="0 0 16 19"
                          width="24"
                        >
                          <path
                            d="M11.585 18.334H4.467v-.667c.371-.135 1.916-1.009 2.356-1.076V1.667H2.947L1.3 5.14H.667c-.051-.338 0-4.469 0-4.807h14.718c0 .338.05 4.452 0 4.807h-.658L13.13 1.667H9.255V16.59c.439.084 1.976.924 2.33 1.076v.666z"
                            fill="#3E7BFA"
                          />
                        </svg>
                      </span>
                      <div>
                        <div>
                          text1
                        </div>
                        <div
                          class="meta"
                        >
                          text1
                           . 
                          vault1
                        </div>
                      </div>
                    </div>
                    <span
                      class="bp3-icon StyledProps--main iconCheck"
                      data-icon="pipeline-approval"
                    >
                      <svg
                        height="16"
                        viewBox="0 0 19 17"
                        width="16"
                      >
                        <path
                          d="M18.81.669l.006.004.015.013a.5.5 0 01.062.7L6.479 16.375a.5.5 0 01-.709.062.52.52 0 01-.136-.176.523.523 0 01-.126-.095L.132 10.578a.5.5 0 01.005-.698l.017-.018a.5.5 0 01.707-.005l.007.007 5.233 5.367L18.107.735a.5.5 0 01.704-.066z"
                          fill="#5CC800"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <button
              class="bp3-button bp3-disabled StyledProps--font Button--button Button--with-current-color StyledProps--main applyButton bp3-popover-dismiss StyledProps--intent-primary"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                entityReference.apply
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
  <button
    class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main crossIcon"
    type="button"
  >
    <span
      class="bp3-icon bp3-icon-cross StyledProps--main"
      icon="cross"
    >
      <svg
        data-icon="cross"
        height="18"
        viewBox="0 0 16 16"
        width="18"
      >
        <desc>
          cross
        </desc>
        <path
          d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;
